pipeline: publish:s3:apt-repo: Add gpg
Missing after 03d5e23.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,7 +150,7 @@ test:acceptance:
   dependencies:
     - build
   before_script:
-    - apt update && apt install -yyq awscli
+    - apt update && apt install -yyq gpg awscli
     # Check and import GPG keys
     - if [ -z "$GPG_PRIV_KEY_DIST" -o -z "$GPG_PUB_KEY_BUILD" ]; then
     -   echo "Error. GPG keys not available"
