--- a/recipes/mender-connect/debian-1.0.x/control
+++ b/recipes/mender-connect/debian-1.0.x/control
@@ -7,10 +7,8 @@ Build-Depends: debhelper (>= 9)
 
 Package: mender-connect
 Architecture: any
-Depends: libc6 (>= 2.12), libglib2.0-0 (>=2.50), mender-client (>3.1.99)
+Depends: libc6 (>= 2.12), libglib2.0-0 (>=2.50), mender-client (>=2.5.0)
 Description: Mender Connect
  Mender Connect is a Mender add-on which enhances the Mender Client providing a bidirectional
- communication channel with the server. It supports the following troubleshooting features:
+ communication channel with the server. It supports the following features:
  - Interactive shell terminal sessions
- - File Transfer
- - Port forward
