MEN-5137: Create the mender-monitor-demo package
This adds the mender-monitor-demo package, which contains the example monitors
from the mender-monitor directory as a part of the installation.

Changelog: None
Signed-off-by: Ole Petter <ole.orhagen@northern.tech>

--- a/recipes/mender-monitor/debian-master/control
+++ b/recipes/mender-monitor/debian-master/control
@@ -9,7 +9,11 @@ Package: mender-monitor
 Architecture: all
 Depends: bash, lmdb-utils, mender-client (>=2.5.0), ${misc:Depends}
 Description: Mender Monitor client
- The monitor client is a Mender add-on which enables the reporting of certain
- device events to the Mender server, such as log, service files and D-Bus
- signals.
+ Mender Monitor is a Mender add-on which enables the reporting of certain
+ device events to the Mender server, such as log events, service files statuses
+ and D-Bus signals.
  
+Package: mender-monitor-demo
+Architecture: all
+Depends: mender-monitor, ${misc:Depends}
+Description: Adds demo functionality to Mender Monitor.
