--- a/recipes/mender-monitor/debian-master/rules
+++ b/recipes/mender-monitor/debian-master/rules
@@ -5,5 +5,8 @@
 %:
 	dh $@
 
-override_dh_link:
-	true
+override_dh_auto_install:
+	DESTDIR=debian/tmp make install install-example-monitors
+
+override_dh_missing:
+	dh_missing --fail-missing
