--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -394,7 +394,7 @@ publish:s3:mender-monitor:automatic:
     # Make copies in known destinations to be consumed by get.mender.io script:
     # * For "experimental" channel, we make a copy of the newest master package in the master directory
     # * For "stable" channel, we make a copy in a separate "latest" subdirectory of the latest tagged version
-    # This needs to be reworked before Mender 3.2, see MEN-5029 for more details.
+    # This can to be reworked for better maintainability, see MEN-5029 for more details.
     - if is_build_tag ${MENDER_GATEWAY_VERSION} || [ "${MENDER_GATEWAY_VERSION}" == "master" ]; then
     -   for arch in amd64 arm64 armhf; do
     -     aws s3 cp output/commercial/mender-gateway*_${arch}.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/master/mender-gateway_master-1_${arch}.deb 
