--- a/recipes/mender-gateway/debian-master/control
+++ b/recipes/mender-gateway/debian-master/control
@@ -7,7 +7,9 @@ Build-Depends: debhelper (>= 9)
 
 Package: mender-gateway
 Architecture: any
-Depends: libc6 (>= 2.12)
+Depends: ${shlibs:Depends}, ${misc:Depends}
+# debian bullseye Depends: libc6 (>= 2.17)
+# debian buster Depends: libc6 (>= 2.17)
 Suggests: mender-client
 Description: Mender Gateway
  Mender Gateway exposes the Mender Device APIs to local devices
